--- a/src/main/webapp/WEB-INF/views/css/app.css
+++ b/src/main/webapp/WEB-INF/views/css/app.css
@@ -323,6 +323,7 @@ textarea.form-control {
 .hide{
 	display: none;
 }
+
 .dropdown-submenu {
   position: relative;
 }
@@ -333,10 +334,24 @@ textarea.form-control {
   right: 6px;
   top: .8em;
 }
-
 .dropdown-submenu .dropdown-menu {
   top: 0;
   left: 100%;
   margin-left: .1rem;
   margin-right: .1rem;
+}
+
+
+.dropdown>.dropdown-menu {
+  top: 200%;
+  transition: 0.3s all ease-in-out;
+}
+.dropdown:hover>.dropdown-menu {
+  display: block;
+  top: 100%;
+}
+
+.dropdown>.dropdown-toggle:active {
+  /*Without this, clicking will make it sticky*/
+    pointer-events: none;
 }
